--- a/static/createroutine.css
+++ b/static/createroutine.css
@@ -156,7 +156,7 @@ input:checked ~ .bubble::after {
 	margin-top: 1rem;
 }
 
-.create-todo input[type="submit"] {
+.create-todo input[type="submit"], .todo-list a.complete-study-link {
 	display: block;
 	width: 100%;
 	font-size: 1.125rem;
@@ -169,6 +169,8 @@ input:checked ~ .bubble::after {
 	border-radius: 0.5rem;
 	cursor: pointer;
 	transition: 0.2s ease-out;
+	text-decoration: none;
+	text-align: center;
 }
 
 .create-todo input[type="submit"]:hover {
@@ -218,7 +220,7 @@ input:checked ~ .bubble::after {
 	transition: 0.2s ease-in-out;
 }
 
-.todo-item .actions button:hover {
+.todo-item .actions button:hover, .todo-list a.complete-study-link:hover {
 	opacity: 0.75;
 }
 
@@ -234,27 +236,4 @@ input:checked ~ .bubble::after {
 .todo-item.done .todo-content input {
 	text-decoration: line-through;
 	color: var(--grey);
-}
-
-
-/* For the general completed task cta that leads to completed_routine */
-.todo-list a.complete-study-link {
-	display: block;
-	width: 100%;
-	font-size: 1.125rem;
-	padding: 1rem 1.5rem;
-	color: #FFF;
-	font-weight: 700;
-	text-transform: uppercase;
-	background-color: var(--primary);
-	box-shadow: var(--personal-glow);
-	border-radius: 0.5rem;
-	cursor: pointer;
-	transition: 0.2s ease-out;
-    text-decoration: none;
-	text-align: center;
-}
-
-.todo-list a.complete-study-link:hover {
-	opacity: 0.75;
 }
