--- a/templates/create_routine.html
+++ b/templates/create_routine.html
@@ -36,10 +36,20 @@
             <h4>What are you studying today?</h4>
             <input
               type="text"
-              name="name"
-              placeholder="Routine Name"
-              required
+              name="routine_name"
+              <!--
+              Change
+              this
+              field
+              name
+              to
+              differentiate
+              from
+              routine
+              name
+              --
             />
+            placeholder="Routine Name" required />
             <input
               type="text"
               name="content"
