--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,8 +14,7 @@
     <div class="navigation">
       <div class="logo"><a href="#" alt="Logo">StudyMate</a></div>
       <div class="nav-links">
-        <a href="{{ url_for('create_routine') }}">Study Routine</a>
-        <a href="{{ url_for('completed_routines') }}">Completed Routines</a>
+        <a href="{{ url_for('index') }}">Study Routine</a>
         <a href="{{ url_for('logout') }}" class="button">Log Out</a>
       </div>
     </div>
@@ -24,7 +23,9 @@
       <div class="centered-content">
         {% block centered_content %}
         <h1>Welcome, click the plus to get started!</h1>
-        <a href="{{ url_for('create_routine') }}" class="cta-button">+</a>
+
+        <a href="{{ url_for('index') }}" class="cta-button">+</a>
+
         {% endblock %}
       </div>
       <!-- {% block content %}{% endblock %} -->
