--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Cave Todo List</title>
+    <title>StudyMate</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
   </head>
   <body>
-    <h1 class="headers">Edit Todo List</h1>
+    <h1 class="headers">Edit Study Item</h1>
     <form action="{{ url_for('edit', id=task.id) }}" method="post">
-      <input type="text" name="todo" value="{{ task.task }}" />
+      <input type="text" name="study_items" value="{{ task.task }}" />
       <button type="submit">Save</button>
     </form>
-    <a href="{{ url_for('index') }}">Back to Todo List</a>
+    <a href="{{ url_for('index') }}">Back to Study Item</a>
   </body>
 </html>
