--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Code Cave Todo List - Register</title>
+    <title>StudyMate - Register</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='createroutine.css') }}"
