--- a/templates/login.html
+++ b/templates/login.html
@@ -6,14 +6,14 @@
     <title>Code Cave Todo List - Login</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='createroutine.css') }}"
+      href="{{ url_for('static', filename='newstyle.css') }}"
     />
   </head>
   <body>
     <div class="container">
       <h1 class="headers">Login to StudyMate!📚</h1>
 
-      <!-- Display flash messages -->
+      <!-- Display flash messages
       {% with messages = get_flashed_messages(with_categories=true) %} {% if
       messages %}
       <ul>
@@ -21,7 +21,7 @@
         <li class="{{ category }}">{{ message }}</li>
         {% endfor %}
       </ul>
-      {% endif %} {% endwith %}
+      {% endif %} {% endwith %} -->
 
       <form action="{{ url_for('login') }}" method="post">
         <div class="form-group">
