--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,7 @@
     <div class="navigation">
       <div class="logo"><a href="#" alt="Logo">StudyMate</a></div>
       <div class="nav-links">
-        <a href="{{ url_for('index') }}">Study Routine</a>
+        <a href="{{ url_for('index') }}">Study Items</a>
         <a href="{{ url_for('logout') }}" class="button">Log Out</a>
       </div>
     </div>
