--- a/static/styles.css
+++ b/static/styles.css
@@ -56,7 +56,17 @@ body {
     text-align: center;
 }
 
-
+.collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
 
 /* Content Styles */
 .content {
