Limit-studytask-Feature

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
         <label>
           <input
             type="checkbox"
-            name="done"
+            name="Done"
             {%
             if
             study_items.done
@@ -111,5 +111,6 @@
       });
     });
   </script>
+ </div>
 </body>
 </html>
