--- a/templates/index.html
+++ b/templates/index.html
@@ -91,11 +91,15 @@
       {% endfor %}
     </ul>
   </div>
+  <!-- Form Action to add-->
+  <div class="container">
   <form action="{{ url_for('add') }}" method="post">
-    <input type="text" name="study_items" placeholder="Example: 'Mathematics'" />
-    <button type="submit" class="button">Add Study Item</button>
+      <input type="text" name="study_items" placeholder="Example: 'Mathematics'" />
+      <button type="submit" class="button">Add Study Item</button>
   </form>
+
   <a href="{{ url_for('logout') }}">Logout</a>
+  </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
