--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <title>StudyMate</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='createroutine.css') }}" />
 </head>
-
+{% include 'navigation.html' %}
 <body>
   <div class="container">
     <h1 class="headers">{{ username }}'s Study Items</h1>
@@ -90,15 +90,6 @@
       </li>
       {% endfor %}
     </ul>
-  </div>
-  <!-- Form Action to add-->
-  <div class="container">
-  <form action="{{ url_for('add') }}" method="post">
-      <input type="text" name="study_items" placeholder="Example: 'Mathematics'" />
-      <button type="submit" class="button">Add Study Item</button>
-  </form>
-
-  <a href="{{ url_for('logout') }}">Logout</a>
   </div>
 
   <script>
