--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -14,8 +14,9 @@
   <div class="navigation">
     <div class="logo"><a href="#" alt="Logo">StudyMate</a></div>
     <div class="nav-links">
-      <a href="{{ url_for('layout') }} "> Add StudyItem</a>
+      <a href="{{ url_for('layout') }} "> Add Item</a>
       <a href="{{ url_for('index') }}">Study Items</a>
+      <a href="{{ url_for('completed') }}">Completed Items</a>
       <a href="{{ url_for('logout') }}" class="navbutton">Log Out</a>
     </div>
   </div>
