--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,31 +6,46 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="{{ url_for('static', filename='styles.css') }}"
+      href="{{ url_for('static', filename='createroutine.css') }}"
     />
     <title>StudyMate</title>
   </head>
   {% include 'navigation.html' %}
   <body>
-    <div class="content">
+    <div class="container">
       <div class="centered-content">
         {% block centered_content %}
         <h1>Add a task, get productive</h1>
+
         <!-- Form Action to add-->
         <div class="container">
           <form action="{{ url_for('add') }}" method="post">
-            <input
-              type="text"
-              name="study_items"
-              placeholder="Example: 'do X'"
-            />
-            <button type="submit" class="button">Add Study Item</button>
+
+            <!-- dropdown to select tags -->
+            <select name="tag"  required>
+              <option value="" selected>Select a tag</option>
+              {% for tag in predefined_tags %}
+              <option value="{{ tag }}">{{ tag }}</option>
+              {% endfor %}
+            </select>
+
+            <!-- Action to add- -->
+            <input type="text" class="input-field" name="study_items" placeholder="Example: 'do X'" required>
+            <button type="submit" class="add-button">Add Study Item</button>
           </form>
-          <!-- <a href="{{ url_for('logout') }}">Logout</a> -->
         </div>
         {% endblock %}
       </div>
-      <!-- {% block content %}{% endblock %} -->
     </div>
   </body>
 </html>
+
+
+
+
+    <!-- Form to add a new tag
+          <form action="{{ url_for('layout') }}" method="GET">
+            <label for="new_tag">Add New Tag:</label>
+            <input type="text" id="new_tag" name="new_tag" placeholder="Enter new tag">
+            <button type="submit">Add Tag</button>
+          </form> -->
